# waves_sim

./: .gitignore  CMakeLists.txt  README.md  package.xml
data/: model_sources.txt
launch/: sim.launch.py
metadata/: 00-dynamics.scn  00-statics.scn  01-dynamics.scn  01-statics.scn  02-dynamics.scn  02-statics.scn  03-dynamics.scn  03-statics.scn  LiDAR.scn  blueboat.scn  cliff-dynamics.scn  cliff-dynamics_bb.scn  cliff-dynamics_no-sensors.scn  cliff-statics.scn  dynamics.scn  environment_base.scn  freya.scn  looks.scn  materials.scn  robot.scn  static_sensor_platform.scn  statics.scn  surroundings.scn  test_vehicle.scn  windmill-dynamics_bb.scn  windmill-dynamics_no-sensors.scn  windmill-statics.scn
scenario_parser/: 00-dynamics.json  02-dynamics.json  1-windpark-statics.json  cliff-dynamics.json  cliff-vehicle_characteristics.json  cliff-vehicle_characteristics_bb.json  dynamics.json  parsing_methods.py  scenario_parser.py  senario_parser.py  statics.json  vehicle_characteristics.json  wave_noise_analysis.ipynb
scenario_parser/input/: statics.json
scenario_parser/json_files/: 00-statics.json  01-dynamics.json  01-vehicle_characteristics.json  02-vehicle_characteristics.json  03-dynamics.json  cliff-dynamics.json  cliff-dynamics_bb.json  cliff-statics.json  windmill-dynamics.json  windmill-vehicle_characteristics.json
scenarios/: ocean.scn  plane.scn  testing.scn
senario_parser/: senario_parser.py
src/: CMakeLists.txt  LiDAR_converter.cpp  main.cpp  materials.scn  testing.scn  thrust_allocator.cpp
src/cpp_approach/: ocean_sim.cpp
(+1 files in other folders)
